// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`club queries clubs correctly 1`] = `
{
  "data": {
    "clubs": [
      {
        "address": "address",
        "contact": "contact",
        "description": "description",
        "email": "email",
        "id": 1,
        "imageUrls": [],
        "links": [],
        "name": "name",
        "region": "region",
        "specials": "specials",
      },
      {
        "address": "address",
        "contact": "contact",
        "description": "description",
        "email": "email",
        "id": 2,
        "imageUrls": [],
        "links": [],
        "name": "name",
        "region": "region",
        "specials": "specials",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`club queries existing club correctly 1`] = `
{
  "data": {
    "club": {
      "address": "address",
      "contact": "contact",
      "description": "description",
      "email": "email",
      "id": 1,
      "imageUrls": [],
      "links": [],
      "name": "name",
      "region": "region",
      "specials": "specials",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
